[package]
name = "Quelle-AVX"
version = "0.1.0"
authors = ["Kevin Wonus <kevin@wonus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.5.0"
askama = { version = "0.8" }
mime = "0.3"
futures = "0.3.1"
serde = { version = "^1.0", features = ["derive"] }
rmp = "^0.8"
rmp-serde = "0.15.4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "Quelle-AVX"
path = "src/main.rs"
